2007-08-24  Stefan Harmeling  <harmeling@gmail.com>

	* prules.c (resolve_assign_prule): now lhs=rhs always produces 

	(extend scope symbol context value)

	* eval.c (call_rha_fun): added 'static'

	* parse.c (resolve_code_block): now a sequence of commands in
	curly brackets is split after a code block (in curly brackets) if
	not a "second-order-keyword" such as currently 'else' or 'catch'
	is following.  However, this solution is preliminary, since if we
	extend the syntax with new complicated freefix form we need to add
	them here by hand.

	* rha_lexer.l: removed the case with \n  \n that generated a
	semicolon, since now 'resolve_code_block' deals with it.

	* rhabarber.c (main): the outer-most (do_sym 17; 42+42) is now
	dealt with outside the eval function, which makes sense, since it
	only happens in the real-eval-loop.  now typing 'deliver 17' at
	the prompt generates (do_sym (deliver 17)) but doesn't open a
	BLOCK_FRAME and thus issues the correct error.

2007-08-23  Stefan Harmeling  <harmeling@gmail.com>

	* object.c (extend): added extend, which is not done yet and which
	doesn't really extend right now, but should only overwrite an
	existing function definiton.

	* prules.c (resolve_assign_prule): rewritten the whole thing for
	stuff like f(x)=2*x.  However, right now += and friends no longer
	work.  But can be easily put back.

	* tuple_fn.c (tuple_set): now also tuple_set returns the tuple and
	we can do:

	    t = tuple(3).set(0, 17).set(1, 42).set(2, 55);

	* list.rha (fn): added PERL like pop, push, shift, unshift.

	* parse.c (resolve_dots_and_fn_calls): rewrote the whole thing to
	allow magic stuff like:

	     l = list().push(17).push(42);

	* list_fn.c (list_append, list_prepend, list_extend): all of them
	return now the list.

2007-08-23  Mikio Braun  <mikiobraun@gmail.com>

	* object.c (assign): added error message if you try to assign a
	void

2007-08-23  Stefan Harmeling  <harmeling@gmail.com>
